--- a/templates/catalog/layouts/header.html.twig
+++ b/templates/catalog/layouts/header.html.twig
@@ -117,7 +117,7 @@
           </div>
 
           <!-- Shopping Cart -->
-          <div class="relative">
+          <div class="relative" data-module="cart-counter">
             <a href="/cart" class="flex items-center space-x-2 p-2 rounded-lg hover:bg-gray-50 transition-colors group">
               <div class="relative">
                 <svg class="w-6 h-6 text-gray-600 group-hover:text-blue-600 transition-colors" fill="none" stroke="currentColor" viewBox="0 0 24 24">
