Обновлены SVG иконки в шаблонах на более современные версии с использованием stroke-width 1.5 для улучшения визуального восприятия. Изменения затронули файлы: _grid.html.twig, breadcrumbs.html.twig, footer.html.twig, header.html.twig, navbar.html.twig, show.html.twig и другие. Улучшена читаемость и консистентность иконок по всему проекту.

--- a/templates/catalog/layouts/breadcrumbs.html.twig
+++ b/templates/catalog/layouts/breadcrumbs.html.twig
@@ -5,19 +5,8 @@
       <ol class="flex items-center gap-1 text-sm text-gray-700">
       <li>
         <a href="/" class="block transition-colors hover:text-gray-900" aria-label="Home">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="size-4"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
-            />
+          <svg class="size-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/>
           </svg>
         </a>
       </li>
@@ -33,17 +22,8 @@
         {% endif %}
         {% if not isHomeCrumb %}
         <li class="rtl:rotate-180">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="size-4"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-              clip-rule="evenodd"
-            />
+          <svg class="size-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5"/>
           </svg>
         </li>
 
