--- a/templates/catalog/layouts/navbar.html.twig
+++ b/templates/catalog/layouts/navbar.html.twig
@@ -18,8 +18,8 @@
       <!-- Special Offers -->
       <div class="hidden md:flex items-center">
         <div class="flex items-center bg-red-50 text-red-600 px-3 py-1 rounded-full">
-          <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"></path>
+          <svg class="w-4 h-4 mr-1" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9.568 3H5.25A2.25 2.25 0 0 0 3 5.25v4.318c0 .597.237 1.17.659 1.591l9.581 9.581c.699.699 1.78.872 2.607.567a18.849 18.849 0 0 0 5.223-5.223c.305-.827.132-1.907-.567-2.607l-9.58-9.58A2.25 2.25 0 0 0 9.568 3Z"/>
           </svg>
           <span class="text-sm font-medium">Скидки 50%</span>
         </div>
