--- a/templates/catalog/cart/index.html.twig
+++ b/templates/catalog/cart/index.html.twig
@@ -103,19 +103,19 @@
 
     <div class="mt-4 text-right text-lg">
       {% if delivery.cost is defined and delivery.cost is not null %}
-        <div>Стоимость товаров: {{ format_price(cart.subtotal) }} {{ cart.currency }}</div>
-        <div>Доставка: {{ format_price(delivery.cost) }} {{ cart.currency }}</div>
+        <div>Стоимость товаров: <span id="cart-subtotal" data-cart-subtotal>{{ format_price(cart.subtotal) }}</span> {{ cart.currency }}</div>
+        <div>Доставка: <span id="cart-shipping" data-cart-shipping>{{ format_price(delivery.cost) }}</span> {{ cart.currency }}</div>
         {% if delivery.term %}
-          <div class="text-sm text-gray-600">{{ delivery.term }}</div>
+          <div class="text-sm text-gray-600" id="cart-shipping-term" data-cart-shipping-term>{{ delivery.term }}</div>
         {% endif %}
         <div class="border-t pt-2 font-semibold">
-          Итого: <span id="cart-total">{{ format_price(cart.subtotal + delivery.cost) }}</span> {{ cart.currency }}
+          Итого: <span id="cart-total" data-cart-total>{{ format_price(cart.subtotal + delivery.cost) }}</span> {{ cart.currency }}
         </div>
       {% else %}
-        <div>Стоимость товаров: {{ format_price(cart.subtotal) }} {{ cart.currency }}</div>
-        <div>Доставка: Расчет менеджером</div>
+        <div>Стоимость товаров: <span id="cart-subtotal" data-cart-subtotal>{{ format_price(cart.subtotal) }}</span> {{ cart.currency }}</div>
+        <div>Доставка: <span id="cart-shipping" data-cart-shipping>Расчет менеджером</span></div>
         <div class="border-t pt-2 font-semibold">
-          Итого: <span id="cart-total">{{ format_price(cart.subtotal) }}</span> {{ cart.currency }}
+          Итого: <span id="cart-total" data-cart-total>{{ format_price(cart.subtotal) }}</span> {{ cart.currency }}
         </div>
       {% endif %}
     </div>
