Обновлен компонент спиннера: изменен z-index для корректного отображения на фоне, обновлены цветовые схемы для состояния загрузки. Шаблон загружаемого контента обновлен для использования нового компонента спиннера с параметрами overlay и размером, что улучшает визуальное восприятие загрузки.

--- a/templates/catalog/layouts/header.html.twig
+++ b/templates/catalog/layouts/header.html.twig
@@ -272,7 +272,12 @@
         </button>
       </div>
       <div class="p-2 max-h-96 overflow-y-auto" id="city-modal-list">
-        <div class="p-4 text-sm text-gray-500">Загрузка...</div>
+        {{ include('components/spinner.html.twig', {
+            id: 'city-modal',
+            visible: true,
+            overlay: false,
+            size: 'medium'
+        }) }}
       </div>
     </div>
   </div>
