--- a/templates/components/spinner.html.twig
+++ b/templates/components/spinner.html.twig
@@ -20,7 +20,7 @@
      data-overlay="{{ spinner_overlay ? 'true' : 'false' }}"
      data-size="{{ spinner_size }}">
 
-  <div class="flex items-center justify-center w-full h-full" style="position: relative;">
+  <div class="flex items-center justify-center w-full h-full" style="position: relative;z-index: -1;">
     <!-- Spinner content will be inserted here by JavaScript -->
   </div>
 </div>
